Test Org - Speridian/src/objects/BA_Correspondence__c.object
<CustomObject>
    <fields>
        <fullName>Ba_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Correspondence</relationshipLabel>
        <relationshipName>Correspondence</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Status__c</fullName>
        <label>Document Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>using for Ba_GroupAttachmentLstCmp component.</description>
        <label>Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ba_CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_DocumentType__c</fullName>
        <label>Document Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Correspondence (Group)</relationshipLabel>
        <relationshipName>Correspondence1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Correspondence</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Document Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Correspondence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>